Fixed text wrapping in code blocks

--- a/less/blocks.less
+++ b/less/blocks.less
@@ -214,6 +214,10 @@
 
 	}
 
+	& pre code {
+		white-space: pre;
+	}
+
 }
 
 .cdx-list.cdx-list--ordered,
